--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/react-redux": "^7.1.34",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/yup": "^0.29.14",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -51,9 +50,14 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^22.15.29",
+    "@types/node": "^18.19.110",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/ref0612/tuguaridacreativa.git",
+  "author": "ref0612 <ref0612@gmail.com>",
+  "license": "MIT"
 }
