--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "customize-cra": "^1.0.0",
